Fix to spacing on the exhibitor page.

--- a/css/main.css
+++ b/css/main.css
@@ -62,5 +62,6 @@ footer p { line-height: 1.3em; font-size: 1.2em; color: #fff; }
 .huge { font-size: 3em; line-height: 0.8em; font-weight: bold; }
 
 .poly_single * + * { margin-top: 12px; }
+.poly_single .row :first-child { margin-top: 12px; }
 
 .sched ul { list-style: none; padding:0; margin: 0;}
